# backend/src/apis/bonus-api.js
@@ -1,23 +1,5 @@
 const bonusService = require('../services/bonus-service');
 const { fromJSON } = require("../dtos/EvaluationDTO");
-
-/**
- * gets the total bonus of social performance records for a specific evaluation of a salesman
- * @param req
- * @param res
- */
-exports.getSPRBonus = function (req, res){
-    const db = req.app.get('db');
-    let sid = req.params.id;
-    let year = req.params.year;
-
-    bonusService.getSPRBonus(db, sid, year).then(bonus => {
-        res.status(200).send({bonus: bonus});
-    }).catch(_ => {
-        res.status(404).send(`No bonus for ${sid} and ${year} found!`);
-    });
-}
-
 /**
  * recalculates the total bonus of social performance records for a specific evaluation of a salesman
  * @param req
@@ -31,40 +13,6 @@ exports.recalculateSPRBonus = function (req, res){
         res.status(200).send(spr);
     }).catch(_ => {
         res.status(404).send(`Error recalculating bonus for ${evaluation.sid} and ${evaluation.year}!`);
-    });
-}
-
-/**
- * gets the total bonus of order evaluations for a specific evaluation of a salesman
- * @param req
- * @param res
- */
-exports.getOEBonus = function (req, res){
-    let sid = req.params.id;
-    let year = req.params.year;
-
-    bonusService.getOEBonus(sid, year).then(bonus => {
-        res.status(200).send({bonus: bonus});
-    }).catch(_ => {
-        res.status(404).send(`No bonus for ${sid} found!`);
-    });
-}
-
-/**
- *
- * gets the total bonus for a specific evaluation of a salesman
- * @param req
- * @param res
- */
-exports.getTotalBonus = function (req, res){
-    const db = req.app.get('db');
-    let sid = req.params.id;
-    let year = req.params.year;
-
-    bonusService.getTotalBonus(db, sid, year).then(bonus => {
-        res.status(200).send({bonus: bonus});
-    }).catch(_ => {
-        res.status(404).send(`No bonus for ${sid} and ${year} found!`);
     });
 }
 
