# backend/src/apis/evaluation-api.js
@@ -74,95 +74,4 @@ exports.updateEvaluation = function (req, res) {
     });
 }
 
-/**
- * deletes an evaluation from the database
- * @param req
- * @param res
- */
-exports.deleteEvaluation = function (req, res) {
-    const db = req.app.get('db');
-    let sid = req.params.id;
-    let year = req.params.year;
-
-    evaluationService.deleteEvaluation(db, sid, year).then(_ => {
-        res.status(200).send('Evaluation deleted!');
-    }).catch(_ => {
-        res.status(500).send('Evaluation could not be deleted!');
-    });
-}
-
-/**
- * gets the order evaluation of an evaluation by its sid and year
- * @param req
- * @param res
- */
-exports.getOrderEvaluation = function (req, res){
-    const db = req.app.get('db');
-    let sid = req.params.id;
-    let year = req.params.year;
-
-    evaluationService.getOrderEvaluation(db, sid, year).then(oe => {
-        // remove _id from oe
-        const {_id, ...oeData} = oe;
-        res.status(200).send(oeData);
-    }).catch(_ => {
-        res.status(404).send(`No OrderEvaluation with ${sid} and ${year} found!`);
-    });
-}
-
-/**
- * updates the order evaluation of an evaluation by its sid and year
- * @param req
- * @param res
- */
-exports.updateOrderEvaluation = function (req, res) {
-    const db = req.app.get('db');
-    let sid = req.params.id;
-    let year = req.params.year;
-    const oeDto = OrderEvaluationDTO.fromJSON(req.body);
-
-    evaluationService.updateOrderEvaluation(db, sid, year, oeDto).then(_ => {
-        res.status(200).send('OrderEvaluation updated!');
-    }).catch(_ => {
-        res.status(500).send('OrderEvaluation could not be updated!');
-    });
-}
-
-/**
- * gets the social performance record of an evaluation by its sid and year
- * @param req
- * @param res
- */
-exports.getSocialPerformanceRecord = function (req, res){
-    const db = req.app.get('db');
-    let sid = req.params.id;
-    let year = req.params.year;
-
-    evaluationService.getSocialPerformanceRecord(db, sid, year).then(spr => {
-        // remove _id from spr
-        const {_id, ...sprData} = spr;
-        res.status(200).send(sprData);
-    }).catch(_ => {
-        res.status(404).send(`No SocialPerformanceRecord with ${sid} and ${year} found!`);
-    });
-}
-
-/**
- * updates the social performance record of an evaluation by its sid and year
- * @param req
- * @param res
- */
-exports.updateSocialPerformanceRecord = function (req, res) {
-    const db = req.app.get('db');
-    let sid = req.params.id;
-    let year = req.params.year;
-    const sprDto = SocialPerformanceRecordDTO.fromJSON(req.body);
-
-    evaluationService.updateSocialPerformanceRecord(db, sid, year, sprDto).then(_ => {
-        res.status(200).send('SocialPerformanceRecord updated!');
-    }).catch(_ => {
-        res.status(500).send('SocialPerformanceRecord could not be updated!');
-    });
-}
-
 module.exports = exports;
